# modelagem-dos-robos

./: 2R_rotacionais.py  README.md  pyproject.toml  requirements.txt
